Bug 115643 - Problems connecting to OneDrive and Google Drive
Summary: Problems connecting to OneDrive and Google Drive
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
6.0.1.1 release
Hardware: All Linux (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.2.0 target:7.1.0.0.beta2
Keywords:
: 121688 121871 129048 (view as bug list)
Depends on:
Blocks: Network
  Show dependency treegraph
 
Reported: 2018-02-12 09:13 UTC by Eduardo
Modified: 2021-07-28 09:22 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
authentication screenshot (8.27 KB, image/jpeg)
2020-05-13 18:37 UTC, Jerry
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Eduardo 2018-02-12 09:13:57 UTC
Description:
In ubuntu 16.04 with latest update i cant connect to One Drive ( it doesnt appear as remote service, but in windows it does). Also i cant connect to my Google Drive account....After setting the correct email and password it asks for a master password ??? Sometimes i get a general input/output error.

Think this should be solved because using the cloud is a must with the most popular cloud drives ( box, dropbox, drive and one). 

Steps to Reproduce:
1.File -> Open -> Remote file
2.Configure to use One Drive
3.It doesnt appear, so i cant set the connection.

In google drive it appears, but it doesnt work.

Actual Results:  
I cant connect to one drive or google drive

Expected Results:
Connect and work with one drive, google drive. Save, open files from cloud services.


Reproducible: Always


User Profile Reset: No



Additional Info:
Versión: 6.0.1.1
Id. de compilación: 1:6.0.1~rc1-0ubuntu0.16.04.1~lo1
Subprocs. CPU: 4; SO: Linux 4.4; Repres. IU: predet.; VCL: gtk2; 
Configuración regional: es-ES (es_ES.UTF-8); Calc: group


User-Agent: Mozilla/5.0 (X11; Ubuntu; Linux x86_64; rv:58.0) Gecko/20100101 Firefox/58.0
Comment 1 blendergeek 2018-02-13 16:34:35 UTC
In LibreOffice 6.0.1.1, there is no option for OneDrive, I can confirm that.

I can confirm the ongoing problems with Google Drive sign-in. I believe that could be a duplicate of any of the following bugs:
#101630
#100914
#97140
It could even be related to these Google Drive bugs:
#87121
#88834


However, I will point out that WebDav is working just fine. I easily connected to a NextCloud server without any problem.

I am renaming this bug from "LibreOffice doesn't work with remote files" to "Problems connecting to OneDrive and Google Drive" as that is the actual bug being reported. I am leaving as UNCONFIRMED because I am not sure what bug is being discussed here.
Comment 2 Eduardo 2018-02-19 10:11:17 UTC
So it should be a major/critical problem. Not able to use remote files nowadays is a must as more and more people rely on cloud services to save their work. In concrete One Drive is the default place to save Microsoft Office docuements.
Comment 3 Buovjaga 2018-03-07 11:17:24 UTC
Ok, Eduardo, now you have to go through these reports and determine, if you report is a duplicate:
bug 101630
bug 100914
bug 97140
bug 87121
bug 88834
Comment 4 Eduardo 2018-03-16 09:52:10 UTC
Its difficult to say. This bugs are all related to mine with different web cloud services and different Libreoffice versions. My bug is related to Gmail ( google drive WITHOUT double authentication) and One Drive. I need to say that this is a major bug as a lot of people want to use libreoffice with Drive or One, as Office does.
Comment 5 Eduardo 2018-03-19 11:12:05 UTC
As additional comments:

- In linux one drive doesnt appear in the list of avalaible services. Google drive does but it doesnt work ( IO: General Error).

In Windows 10:
- Google drive works ok.
- One Drive appears in the list. But when i paste the code in the confirmation window it says no device found and doesnt connect to one drive

Hope it can help someway...
Comment 6 Stefano 2018-06-13 15:23:42 UTC
Ubuntu 16.04 LTS
I installed a fresh LibreOffice (V6.0.4.1) today.
Trying to connect to Remote Files asks to install a 'New Service'.
Selecting 'Google Drive' opens a new windows where to input user and password.
After clicking ok, a new windows asks for a 6 digit pin 'Authentication Code'.
My phone asks me if I want to allow connection, I select 'Yes'
Using Google Authenticator on phone, I copy the Google 6 digits into the LibreOffice windows.
A new window with an Error opens: 'The specified device is invalid'
I tried this several times, both being logged into my Google A/c and unlogged.
Always got the same error.
Comment 7 Buovjaga 2018-06-13 16:08:38 UTC
It is weird that some Ubuntu users had a different problem, but now G. Drive is working fine for them: bug 117271
Comment 8 Eduardo 2018-11-24 11:15:00 UTC Comment hidden (no-value)
Comment 9 m_a_riosv 2018-12-02 23:04:17 UTC
*** Bug 121871 has been marked as a duplicate of this bug. ***
Comment 10 Xisco Faulí 2018-12-12 18:59:54 UTC
*** Bug 121688 has been marked as a duplicate of this bug. ***
Comment 11 Buovjaga 2020-04-27 16:59:24 UTC
*** Bug 129048 has been marked as a duplicate of this bug. ***
Comment 12 Jerry 2020-05-13 18:37:34 UTC
Created attachment 160777 [details]
authentication screenshot

The Google Drive Remote issue.
Comment 13 Jerry 2020-05-13 18:40:22 UTC
When you try to set up the Remote Drive by entering Google account information you do not receive a confirmation code. Searching for the .com address shown in the authentication error message shows possible malware connection. Please look at the authentication screenshot and comment on url referenced in this message.
Comment 14 Pedro 2020-05-16 09:16:12 UTC
Just an FYI. In the "This week in KDE" of May 15th 2020 Nate Ingraham reported that a similar issue to this one was solved for KMail and Kontacts.

This is their bug report:
https://bugs.kde.org/show_bug.cgi?id=404990

In comment 122 from that bug report they state the following:

<<Google has approved KMail access to Gmail via Googla Sign-in today, so it should work again. Should you still see some errors, please let us know.>>

They link to a Reddit topic where a lot of the steps to fix this are detailed!
https://www.reddit.com/r/kde/comments/gi5bol/kmailkontact_oauth_signin_with_gmail_enabled_again/

Here are the relevant comments:

"Hi all,

I would like to share some news :) This morning Google has approved our verification request to allow KMail/Kontact to sign into Gmail using the Google Sign In, which supports 2FA out-of-the-box and is more secure, since KMail/Kontact never sees your password.

If you have your IMAP account in KMail already configured in KMail and you would like to start using the OAuth sign-in, go to the account configuration (Settings→Configure KMail→Accounts→Receiving→[your Gmail IMAP account]→Modify) and in the Advanced tab select "Gmail" in the Authentication combo box.

If you want to add a new account, the Gmail authentication method will be chosen automatically by KMail.

I apologize it took so long to make Gmail login work again. The bureaucracy that had to be sorted out in order to comply with Google usage policies was non-trivial and I'll admit then whenever I had some spare time to work on KDE, I usually chose to write some code rather than read legal documents and write privacy policy...

Should you still see "Sign in with Google temporarily disabled for this app" or some other error, let me know, please."

"Nothing was wrong with KMail really, but if any application wants to access Gmail through OAuth, it needs to request access to this part of API from Google. Google considers Gmail to be a "restricted" scope and applications needs to pass verification and satisfy some extra requirements to get access to it. So there's a manual process of submitting the application for verification, writing a dedicated privacy policy, having numerous rounds with Google support to clear things app and making sure everything is aligned with their terms and policies for accessing the restricted scopes - it might be fun for a lawyer, but it certainly isn't the kind of activity a programmer would want to do in their spare time... :)" --> https://www.reddit.com/r/kde/comments/gi5bol/kmailkontact_oauth_signin_with_gmail_enabled_again/fqcqxex?utm_source=share&utm_medium=web2x

Here's more detail to satisfy Google's requirements to link to Gmail:
https://support.google.com/cloud/answer/9110914?hl=en

Additional Requirements for Specific API Scopes:
https://developers.google.com/terms/api-services-user-data-policy#additional_requirements_for_specific_api_scopes

Example of privacy policy that Google requires:
https://community.kde.org/KDE_PIM/Privacy_Policy


Hopefully this is enough information for work to be done to fix this bug. It's worth research how this works for Microsoft's One Drive as well since that one is also broken.
Comment 16 Commit Notification 2020-12-14 11:23:13 UTC
Christian Lohmaier committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/9cfcf83f53e0ae897b30705f790c6ebe0b86932e

tdf#115643 make onedrive work again by switching to graph API

It will be available in 7.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 17 Commit Notification 2020-12-14 16:28:25 UTC
Christian Lohmaier committed a patch related to this issue.
It has been pushed to "libreoffice-7-1":

https://git.libreoffice.org/core/commit/f0a35c0941e137e8cf099e11999e6201c1858f3a

tdf#115643 make onedrive work again by switching to graph API

It will be available in 7.1.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 18 Timur 2021-06-18 11:43:21 UTC
I don't intend to test this one but I see there was a fix, and there's bug 62437.
So please retest and explain and see if remaining issue can be in one of these.
Comment 19 Christian Lohmaier 2021-07-28 09:22:17 UTC
I consider this fixed now with the update for bug#101630 
LO can now store the refresh_token so the user doesn't have to do the copy'n'paste dance every time LO is restarted, providing the masterpassword for LO's persistent credentical store is enough (of course only if the user enabled persistent storage in Tools|Options → LibreOffice → Security.

Further fixes are cosmetic in nature (adjusting the repository-add-dialogs to not ask for passowrd, since that isn't used by LO in the oauth2 process at all, and listening on a local port so the pasting-back-to-LO can be omitted.

If you still experience issues with onedrive in the upcoming 7.2.0 rc2, feel free to repoen this bug.
If you still have trouble accessing your files in gdrive, please refer to bug#101630