tdf#115643 make onedrive work again by switching to graph API

the live SDK method had been deprecated quite a while ago and has been
turned off a while back.
Notes:
While you can access and save existing files using the remote files
dialog, creating new files or using "save as" requires using the
LibreOffice open/save dialogs.
Authentication is clunky: username and password you're asked when
creating a new connection is not used at all for connecting, so only
fill out a username to label your onedrive entry. Actual authentication
is done in browser - copy'n'paste the URL from the dialog into the
browser, login and approve access for LibreOffice (approving access only
necessary once), then you get redirected to localhost, ignore that there
is nothing to display. The important part is the code from the URL-bar.
Copy and paste that into the LibreOffice dialog and LO can request an
authentication token for API access.
Testing this feature requires compiling with corresponding api-keys
specified in configure/having an app registered with microsoft.