src/libcmis/http-session.hxx
@@ -132,6 +132,9 @@ class HttpSession
         virtual void setOAuth2Data( libcmis::OAuth2DataPtr oauth2 );
 
         libcmis::HttpResponsePtr httpGetRequest( std::string url );
+        libcmis::HttpResponsePtr httpPatchRequest( std::string url,
+                                                 std::istream& is,
+                                                 std::vector< std::string > headers );
         libcmis::HttpResponsePtr httpPutRequest( std::string url,
                                                  std::istream& is,
                                                  std::vector< std::string > headers );
